--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^6.1.17",
+    "@shopify/flash-list": "^2.2.0",
     "@tamagui/config": "^1.137.1",
     "@tamagui/lucide-icons": "^1.137.1",
     "@tamagui/toast": "^1.137.1",
