--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "babel-preset-expo": "~13.0.0",
     "burnt": "^0.12.2",
     "expo": "^54.0.23",
+    "expo-audio": "^1.0.16",
     "expo-build-properties": "~0.14.6",
     "expo-font": "~13.3.1",
+    "expo-haptics": "~15.0.8",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.5",
     "expo-splash-screen": "~0.30.8",
