--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-build-properties": "~0.14.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~15.0.8",
+    "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.5",
     "expo-splash-screen": "~0.30.8",
@@ -43,6 +44,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gifted-charts": "^1.4.70",
     "react-native-radial-slider": "^1.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
